fixed contact form spacing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -2270,8 +2270,10 @@ background-image: url("https://www.transparenttextures.com/patterns/concrete-wal
     height: 5px;
     /* background-color: #4C6971;
     box-shadow: inset 1px 1px 3px #19363E; */
-    background-color: #4C6971;
-    box-shadow: inset 1px 1px 3px #19363E;
+    /* background-color: #4C6971;
+    box-shadow: inset 1px 1px 3px #19363E; */
+    background-color: #d6d6d6;
+    box-shadow: inset 1px 1px 3px #8A8A8A;
 }
 
 #main h2 {
@@ -2641,14 +2643,16 @@ background-image: url("https://www.transparenttextures.com/patterns/concrete-wal
     margin-top: 15px;
     width: 140px;
     height: 5px;
-    background-color: #4C6971;
-    box-shadow: inset 1px 1px 3px #19363E;
+    /* background-color: #4C6971;
+    box-shadow: inset 1px 1px 3px #19363E; */
+    background-color: #d6d6d6;
+    box-shadow: inset 1px 1px 3px #8A8A8A;
 
 }
 
 /*Sidebar*/
 
-aside#sidebar {
+#sidebar {
     margin: auto;
     width: 530px;
     margin-top: 50px;
@@ -2656,7 +2660,7 @@ aside#sidebar {
     /* border: 1px solid #d6d6d6; */
 }
 
-aside#sidebar .quote input,
+#sidebar .quote input,
 /* aside#sidebar .quote textarea */
  #contact-message {
     /* border-style: solid;
@@ -2768,7 +2772,8 @@ aside#sidebar .quote input,
     margin-top: 8px;
     width: 100px;
     height: 2px;
-    background-color: #4C6971;
+    /* background-color: #4C6971; */
+    background-color: #d6d6d6;
 }
 
 .product_heading {
@@ -3580,8 +3585,10 @@ textarea[name="message"] {
     height: 5px;
     /* background-color: #4C6971;
     box-shadow: inset 1px 1px 3px #19363E; */
-    background-color: #4C6971;
-    box-shadow: inset 1px 1px 3px #19363E;
+    /* background-color: #4C6971;
+    box-shadow: inset 1px 1px 3px #19363E; */
+    background-color: #d6d6d6;
+    box-shadow: inset 1px 1px 3px #8A8A8A;
 }
 
 .insights a {
@@ -3982,7 +3989,7 @@ footer {
     } */
 
     .bg_contact {
-        height: 100vh;
+        min-height: 100vh;
     }
 
     .box_interact img {
@@ -4497,11 +4504,21 @@ footer {
         padding: 0px 5px 0px 5px;
     }
 
+    .insights {
+        padding-top: 0;
+    }
+
     .product-desc h1,
-    .hardware h1 {
+    .hardware h1,
+    .insights h1 {
         margin-top: 25px;
         margin-bottom: 25px;
         font-size: 25px;
+    }
+
+    .page-title {
+        margin-top: 30px;
+        margin-bottom: 25px;
     }
 }
 
@@ -4676,7 +4693,7 @@ footer {
     header nav,
     header nav li,
     article#main-col,
-    aside#sidebar,
+    #sidebar,
     .wrapper,
     .column,
     /* #main .tv1,
@@ -5356,7 +5373,6 @@ footer {
     .dark {
         padding-left: 0px;
         padding-right: 0px;
-        padding-top: 0px;
     }
 
     .dark h3 {
@@ -5370,9 +5386,9 @@ footer {
 
     /*Articles*/
 
-    .insights {
+    /* .insights {
         padding-top: 0px;
-    }
+    } */
 
     .insights h1 {
         font-size: 25px;
@@ -5662,11 +5678,11 @@ footer {
         border: none;
     }
 
-    .dark {
+    /* .dark {
         border: 1px solid #3FC1C1;
         -webkit-box-shadow: none;
         box-shadow: none;
-    }
+    } */
 
     /* video {
         width: 95%;
